--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <h2>Top 10</h2>
      <div class = "topitem">
       <h3>#10: Thing 1</h3>
-      <p>This is a very good description</p>
+      <p>This is a very good description!</p>
      </div>
   </body>
 </html>
