Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,18 +1,338 @@
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>R. Scotoni's portfolio</title>
-   </head>
-   <body>
-    <h1>Renato Scotoni's Programming Portfolio</h1>
-    <div class= "introduction">
-      <p>This is the portfolio of yours truly Renato Scotoni, collecting the best projects I have worked on throughout a semester of intense studying and work in the frigid lands of Canada.</p>
-      <p>And of course, what better way to show off these marks of my knowledge than with a top 10?</p>
-     </div>
-     <h2>Top 10</h2>
-     <div class = "topitem">
-      <h3>#10: Thing 1</h3>
-      <p>This is a very good description!</p>
-     </div>
+  </head>
+  <body>
+    <div id="externaldiv">
+      <div id="containerdiv">
+        <h1>Renato Scotoni's Programming Portfolio</h1>
+        <div class="introduction">
+          <p>
+            This is the portfolio of yours truly Renato Scotoni, collecting the
+            best projects I have worked on throughout a semester of intense
+            studying and work in the frigid lands of Canada.
+          </p>
+          <p>
+            And of course, what better way to show off these marks of my
+            knowledge than with a top 10?
+          </p>
+        </div>
+        <h2>Top 10</h2>
+        <div class="topitem">
+          <h3>#10: Learn Git Branching</h3>
+          <p>
+            "<a href="https://learngitbranching.js.org/">Learn Git Branching</a
+            >" was a challenging experience revolving around the software Git.
+            It explored most intricacies of its usage through flowcharts,
+            allowing me to understand how it functions without the addition of
+            GitHub. Thanks to this website, I can now say that I learned the
+            most common version control tool in the world, which is a necessity
+            for a modern developer.<br />However, as it only taught me in the
+            abstract how to use a piece of software and not a language - what I
+            learned from it does not directly help me code - I cannot rank it as
+            high as other modules.
+          </p>
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">Show Screenshots</button>
+            <div class="content">
+              <img
+                src="https://cdn.glitch.global/be20309f-0ac8-4799-8d1c-9ff34858d8eb/gitngoing0?v=1655866503180"
+                alt="Screenshot of the 'Main' LGB Levels page, fully complete"
+              />
+              <img
+                src="https://cdn.glitch.global/be20309f-0ac8-4799-8d1c-9ff34858d8eb/gitngoing1?v=1655866511142"
+                alt="Screenshot of the 'Remote' LGB Levels page, fully complete"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="topitem">
+          <h3>#9: GitHub Learning Lab Tutorials</h3>
+          <p>
+            The <a href="https://lab.github.com/">GitHub Learning Lab</a> showed
+            me where I could put my Git knowledge to good use: Microsoft's
+            hosting provider is perhaps the most crucial site for a developer to
+            familiarize themselves with - after all, they're hosting this very
+            portfolio! Their Learning Labs may not have been ideal, but they
+            built upon Learn Git Branching's solid foundation to give me a solid
+            rundown of the platform's kinks.<br />Ultimately, however, I cannot
+            in good faith place Git-related modules on the same level as
+            learning how to code.
+          </p>
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">Show Embed</button>
+            <div class="content">
+              <iframe
+                src="https://renatoscotoni.github.io/intro-html/"
+                title="My Github Learning Lab work"
+                width="90%"
+                height="100%"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="topitem">
+          <h3>#8: Khanacademy's Intro to JS</h3>
+          <p>
+            Javascript is one of the fundamental building blocks of the web, and
+            Khanacademy's
+            <a
+              href="https://www.khanacademy.org/computing/computer-programming/programming"
+              >Intro to JS</a
+            >
+            was all about it. During this course, I studied the basics of the
+            language, achieving a good understanding of its functioning that
+            allowed me to further my ability to develop websites.<br />However,
+            this gave me a rather simple understanding of the basics of JS, and
+            many parts of it - such as what I'm using in this very website -
+            went unmentioned. As such, it ranks lowest among Khanacademy
+            courses.
+          </p>
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">Show Example</button>
+            <div class="content">
+              <iframe
+                src="https://www.khanacademy.org/computer-programming/spin-off-of-project-make-it-rain/6190555512487936/embedded?id=1655905419890-0.6050081265492819&origin=https%3A%2F%2Fwholesale-nickel-look.glitch.me&editor=yes&buttons=yes&author=yes&embed=yes"
+                title="Khanacademy's Intro to JS project example"
+                width="90%"
+                height="720"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="topitem">
+          <h3>#7: Khanacademy's Advanced JS: Natural Simulations</h3>
+          <p>
+            In Khanacademy's
+            <a
+              href="https://www.khanacademy.org/computing/computer-programming/programming-natural-simulations"
+              >Advanced JS: Natural Simulations</a
+            >, I learned how to utilize randomness, noise, trigonometry,
+            particle systems, and physics to create programs which approximate
+            reality. While the direct, real-world applications of this aren't
+            obvious, the complexity of some of the projects definitely made me a
+            better programmer.<br />In spite of the module was among the most
+            engaging I have completed this semester, however, its unnecessary
+            length made it, ultimately, an inefficient use of my time.
+          </p>
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">
+              Show Final Project
+            </button>
+            <div class="content">
+              <iframe
+                src="https://www.khanacademy.org/computer-programming/spin-off-of-project-creature-colonies/5614717167517696/embedded?id=1655907905127-0.43995864554018604&origin=https%3A%2F%2Fwholesale-nickel-look.glitch.me&editor=yes&buttons=yes&author=yes&embed=yes"
+                title="Khanacademy's Advanced JS: Natural Simulations final project"
+                width="90%"
+                height="720"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="topitem">
+          <h3>#6: Khanacademy's Intro to HTML/CSS</h3>
+          <p>
+            Khanacademy's
+            <a
+              href="https://www.khanacademy.org/computing/computer-programming/html-css"
+              >intro to HTML and CSS</a
+            >
+            taught me the two languages through which the Internet's
+            less-interactive aspects are programmed. The CSS course was
+            especially interesting, as it showed me how real, modern websites
+            could be designed from a graphic point of view.<br />It ranks lower
+            than it could, however, as the HTML section was rather boring and
+            uncomplicated.
+          </p>
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">Show Example</button>
+            <div class="content">
+              <iframe
+                src="https://www.khanacademy.org/computer-programming/spin-off-of-project-event-invite/4956768912850944/embedded?id=1655907086187-0.7613586326501578&origin=https%3A%2F%2Fwholesale-nickel-look.glitch.me&editor=yes&buttons=yes&author=yes&embed=yes"
+                title="Khanacademy's Intro to HTML/CSS project example"
+                width="90%"
+                height="720"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="topitem">
+          <h3>#5: Phaser Game Jam</h3>
+          <p>
+            During the Phaser Game Jam, I completed Codecademy's "<a
+              href="https://www.codecademy.com/learn/learn-phaser"
+              >Learn Game Development with Phaser.js</a
+            >" course and employed my knowledge of the game development-focused
+            language to modify a pre-existing game,
+            <a
+              href="https://www.codecademy.com/courses/learn-phaser/projects/learn-phaser-codey-jump"
+              >Codey Jump</a
+            >, in a team.<br />While group projects are usually exciting, having
+            to speed through a course in a language I'm unlikely to use again to
+            get to the interesting part was not, and the modification process
+            itself was not as interesting as the process of making a new game
+            from scratch would be have been.<br />However, these suboptimal
+            conditions could be said to have prepared me for unexpected
+            scenarios while at work.<br />
+            <a href="https://github.com/williampalacek/Gamejamcodeyjump">
+              Link to the github repository </a
+            >.
+          </p>
+        </div>
+        <div class="topitem">
+          <h3>#4: Khanacademy's Advanced JS: Games and Visualizations</h3>
+          <p>
+            In Khanacademy's
+            <a
+              href="https://www.khanacademy.org/computing/computer-programming/programming-games-visualizations"
+              >Advanced JS: Games and Visualizations</a
+            >, I learned how to create the titular games and visualizations in
+            ProcessingJS through object-oriented programming, touching on
+            transformations and 3D visualizations along the way. It was an
+            enlightening course, deepening my knowledge of OOP and its
+            applications and furthering my learning whilst not taking that long
+            to complete. The 3D section was particularly eye-opening regarding
+            the lower-level functioning of 3D engines.<br />For all these
+            reasons, this is the most highly ranked Khanacademy course.
+          </p>
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">Show Example</button>
+            <div class="content">
+              <iframe
+                src="https://www.khanacademy.org/computer-programming/spin-off-of-project-memory/6431384126668800/embedded?id=1655941440707-0.1485543398925372&origin=https%3A%2F%2Fwholesale-nickel-look.glitch.me&editor=yes&buttons=yes&author=yes&embed=yes"
+                title="Khanacademy's Advanced JS: Games and Visualizations project example"
+                width="90%"
+                height="720"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="topitem">
+          <h3>#3: Microbit Radio Project</h3>
+          <p>
+            During the course of this project, I and my team utilized the BBC's
+            Microbit to create a rudimentry communication device. This device
+            can send emojis, evaluate signal strength, and act as a simple
+            accelerometer. Throughout this project I learned about the
+            complexity of real-time communication and the limits of radio waves
+            while improving my ability to work in a team.<br />However, the
+            limited real-world applicability of what I learned means I cannot
+            place this project in the top 2.<br />
+            <a href="https://github.com/williampalacek/MicroBit-Messenger">
+              Link to the github repository </a
+            >.
+          </p>
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">
+              Show Project (Due to Makecode's limitations this is hard to load)
+            </button>
+            <div class="content">
+              <iframe
+                src="https://makecode.microbit.org/---codeembed#pub:_WWJ1kARmr17z"
+                title="Khanacademy's Advanced JS: Games and Visualizations project example"
+                width="90%"
+                height="100%"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="topitem">
+          <h3>#2: Mental Health Hackaton</h3>
+          <p>
+            During this team project, we developed a website compiling resources
+            for those struggling with mental illness, especially teenagers our
+            age. The website contains complexly placed and centred divs that
+            work properly on both mobile and desktop, a top nav bar, a hamburger
+            menu and multiple pages.<br />Creating this website was much more
+            engaging than previous projects although - this being the first
+            group coding work in the semester - we did not approach it optimally
+            and had a perhaps uneven division of labour.<br />
+            <a href="https://github.com/williampalacek/AY-Mental-Health">
+              Link to the github repository </a
+            >.
+          </p>
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">
+              Show Finished Product
+            </button>
+            <div class="content">
+              <iframe
+                src="https://mental-health-ay.glitch.me/home.html"
+                title="My Mental Health Website"
+                width="90%"
+                height="100%"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="topitem">
+          <h3>#1: Snake Live Creating Coding Challenge</h3>
+          <p>
+            The Snake Creative Coding Challenge was by far the best and most
+            interesting part of my experience:
+          </p>
+          <ul>
+            <li>
+              It utilizes a language, JavaScript, which is fundamental in
+              front-end development.
+            </li>
+            <li>
+              It was developed in a group and explored extremely complex
+              computer science problems, headaches and bugs.
+            </li>
+            <li>
+              Unlike previous projects, the teamwork on this one was all but
+              flawless.
+            </li>
+          </ul>
+          <p>
+            During this project, we read through an implementation of the game
+            Snake in P5.js and then worked to modify it as we saw fit; while
+            starting with someone else's code may seem suboptimal, we ended up
+            completely reengineering it regardless. At the end of the module,
+            our group presented a "code walkthrough" of the original program and
+            our modifications in what was, possibly, the first presentation in
+            my life I ever enjoyed.<br />
+            <a href="https://github.com/williampalacek/Ay-Multiplayer-snake">
+              Link to the github repository </a
+            >.
+          </p>
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">
+              Show Glitch Modification Project
+            </button>
+            <div class="content">
+              <iframe
+                src="https://glitch.com/edit/#!/multiplayer-snake-ay"
+                title="My Snake Multiplayer Modification Project on glitch.com"
+                width="90%"
+                height="100%"
+              ></iframe>
+            </div>
+          </div>
+          <p>
+            This project implements features such as local competitive
+            multiplayer, the ability to speed up and slow down, and different
+            kinds of food. A word of caution: it contains rapidly changing
+            colour, and those affected by epilepsy may wish to avoid viewing it.
+          </p>
+          <div class="collapsiblecontainer">
+            <button type="button" class="collapsible">
+              Show Finished Modified Game
+            </button>
+            <div class="content">
+              <iframe
+                src="https://multiplayer-snake-ay.glitch.me"
+                title="My Snake Multiplayer Modification"
+                width="90%"
+                height="100%"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="collapsibles.js"></script>
   </body>
 </html>
